--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off">
+          <form class="img-upload__form" method="post" enctype="multipart/form-data" action=" https://30.javascript.pages.academy/kekstagram" id="upload-select-image" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -244,7 +244,7 @@
         <p class="social__text">{{текст комментария}}</p>
       </li>
     </template>
-    
+
 <script src="js/functions.js"></script>
 <script src="js/main.js" type="module"></script>
 </body>
