--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."
+                    data-pristine-maxlength="140"
+                    data-pristine-maxlength-message="Комментарий не может быть длиннее 140 символов"></textarea>
                   </div>
                 </fieldset>
 
@@ -244,7 +246,7 @@
         <p class="social__text">{{текст комментария}}</p>
       </li>
     </template>
-
+<script src="/vendor/pristine/pristine.min.js"></script>
 <script src="js/functions.js"></script>
 <script src="js/main.js" type="module"></script>
 </body>
