--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -246,7 +247,8 @@
         <p class="social__text">{{текст комментария}}</p>
       </li>
     </template>
-<script src="/vendor/pristine/pristine.min.js"></script>
+<script src="vendor/nouislider/nouislider.js"></script>
+<script src="vendor/pristine/pristine.min.js"></script>
 <script src="js/functions.js"></script>
 <script src="js/main.js" type="module"></script>
 </body>
